chore: use ReaderT/ExceptT/StateT monad stack, custom Value type

--- a/package.yaml
+++ b/package.yaml
@@ -24,13 +24,18 @@ dependencies:
 - bytestring
 - cassava
 - containers
+- mtl
+- profunctors
 - scientific
 - text
+- time
 - unordered-containers
 - vector
 
 library:
   source-dirs: src
+  ghc-options:
+  - -Wall
 
 executables:
   habulara-exe:
