--- a/habulara.cabal
+++ b/habulara.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 99a8cfd54dfff437eaf2a79a6946170e20d404c153fc583b3aca544e69d908e4
+-- hash: 15d5032cddb1d376eee34d314148f3eb253c48fd59d8ce5c96830886aa55b8ac
 
 name:           habulara
 version:        0.0.0.0
@@ -28,17 +28,31 @@ source-repository head
 library
   exposed-modules:
       Data.Habulara
+      Data.Habulara.Internal.Combinators
+      Data.Habulara.Internal.Combinators.Commons
+      Data.Habulara.Internal.Combinators.Numeric
+      Data.Habulara.Internal.Combinators.Primitives
+      Data.Habulara.Internal.Combinators.Textual
+      Data.Habulara.Internal.Commons.Text
+      Data.Habulara.Internal.Mapping
+      Data.Habulara.Internal.Reading
+      Data.Habulara.Internal.Writing
+      Data.Habulara.Types
   other-modules:
       Paths_habulara
   hs-source-dirs:
       src
+  ghc-options: -Wall
   build-depends:
       base >=4.7 && <5
     , bytestring
     , cassava
     , containers
+    , mtl
+    , profunctors
     , scientific
     , text
+    , time
     , unordered-containers
     , vector
   default-language: Haskell2010
@@ -56,8 +70,11 @@ executable habulara-exe
     , cassava
     , containers
     , habulara
+    , mtl
+    , profunctors
     , scientific
     , text
+    , time
     , unordered-containers
     , vector
   default-language: Haskell2010
@@ -76,8 +93,11 @@ test-suite habulara-test
     , cassava
     , containers
     , habulara
+    , mtl
+    , profunctors
     , scientific
     , text
+    , time
     , unordered-containers
     , vector
   default-language: Haskell2010
