--- a/habulara.cabal
+++ b/habulara.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: cb6253c3c53691edb345bb8fd10d5b40c6fe105b275f238293a2e8813923c13a
+-- hash: e30d7e33f9bc8a82525d38cd8584b6c796a5b99a9f48429b99659a5a30966c19
 
 name:           habulara
 version:        0.0.0.0
@@ -67,7 +67,29 @@ executable habulara-exe
   other-modules:
       Paths_habulara
   hs-source-dirs:
-      app
+      app/dummy
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
+  build-depends:
+      base >=4.7 && <5
+    , bytestring
+    , cassava
+    , containers
+    , habulara
+    , mtl
+    , profunctors
+    , scientific
+    , text
+    , time
+    , unordered-containers
+    , vector
+  default-language: Haskell2010
+
+executable habulara-saxo-exe
+  main-is: Main.hs
+  other-modules:
+      Paths_habulara
+  hs-source-dirs:
+      app/saxo
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
       base >=4.7 && <5
