--- a/package.yaml
+++ b/package.yaml
@@ -40,7 +40,18 @@ library:
 executables:
   habulara-exe:
     main:                Main.hs
-    source-dirs:         app
+    source-dirs:         app/dummy
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -Wall
+    dependencies:
+    - habulara
+
+  habulara-saxo-exe:
+    main:                Main.hs
+    source-dirs:         app/saxo
     ghc-options:
     - -threaded
     - -rtsopts
