--- a/habulara.cabal
+++ b/habulara.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: fe393633d800587c47b367859d3db60288eb8cad96edd58a5664bdd3f1576ced
+-- hash: a8bc6a3f9d2175c6c8a39b0e7c33c1fc463cf0f48f198ac0d059c5e5a782ac5a
 
 name:           habulara
 version:        0.0.0.0
@@ -28,10 +28,15 @@ source-repository head
 library
   exposed-modules:
       Data.Habulara
+      Data.Habulara.Dsl
       Data.Habulara.Internal.Commons.Convert
       Data.Habulara.Internal.Commons.Read
+      Data.Habulara.Internal.Commons.String
       Data.Habulara.Internal.Commons.Text
       Data.Habulara.Internal.Commons.Time
+      Data.Habulara.Internal.Dsl.Compiler
+      Data.Habulara.Internal.Dsl.Types
+      Data.Habulara.Internal.Dsl.Utils
       Data.Habulara.Internal.Mapping
       Data.Habulara.Internal.Operators
       Data.Habulara.Internal.Reading
@@ -43,7 +48,8 @@ library
       src
   ghc-options: -Wall
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , bytestring
     , cassava
     , containers
@@ -54,6 +60,7 @@ library
     , time
     , unordered-containers
     , vector
+    , yaml
   default-language: Haskell2010
 
 executable habulara-exe
@@ -61,10 +68,11 @@ executable habulara-exe
   other-modules:
       Paths_habulara
   hs-source-dirs:
-      app/dummy
+      app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , bytestring
     , cassava
     , containers
@@ -76,28 +84,7 @@ executable habulara-exe
     , time
     , unordered-containers
     , vector
-  default-language: Haskell2010
-
-executable habulara-saxo-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_habulara
-  hs-source-dirs:
-      app/saxo
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
-  build-depends:
-      base >=4.7 && <5
-    , bytestring
-    , cassava
-    , containers
-    , habulara
-    , mtl
-    , profunctors
-    , scientific
-    , text
-    , time
-    , unordered-containers
-    , vector
+    , yaml
   default-language: Haskell2010
 
 test-suite habulara-test
@@ -109,7 +96,8 @@ test-suite habulara-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , bytestring
     , cassava
     , containers
@@ -121,4 +109,5 @@ test-suite habulara-test
     , time
     , unordered-containers
     , vector
+    , yaml
   default-language: Haskell2010
