--- a/habulara.cabal
+++ b/habulara.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: e3dba70b8ef86d47c94ea5a6f5cfa5a14e3911b66be408d3af84e46a4a4182a9
+-- hash: 0f9f64e990751894908eba5c8b0167a9e2231607734677b566b505db3c297053
 
 name:           habulara
 version:        0.0.0.0
@@ -58,6 +58,7 @@ library
     , mtl
     , profunctors
     , scientific
+    , string-interpolate
     , text
     , time
     , unordered-containers
@@ -82,6 +83,7 @@ executable habulara-exe
     , mtl
     , profunctors
     , scientific
+    , string-interpolate
     , text
     , time
     , unordered-containers
@@ -107,6 +109,7 @@ test-suite habulara-test
     , mtl
     , profunctors
     , scientific
+    , string-interpolate
     , text
     , time
     , unordered-containers
