--- a/package.yaml
+++ b/package.yaml
@@ -45,6 +45,8 @@ library:
   source-dirs: src
   ghc-options:
   - -Wall
+  default-extensions:
+    - OverloadedStrings
 
 executables:
   habulara:
