--- a/package.yaml
+++ b/package.yaml
@@ -75,6 +75,8 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - habulara
+    - QuickCheck
+    - quickcheck-instances
 
   habulara-doctest:
     main:                doctest.hs
