--- a/habulara.cabal
+++ b/habulara.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 4b7bed17c87c83efdecfaf3dce615306d7d6836bdfadbd2461951e78fa638678
+-- hash: 3ca4d5a32131ced66ba77f236b84ec0c231e45e02dbb81e33d77c83e1f551da7
 
 name:           habulara
 version:        0.0.0.2
@@ -45,22 +45,6 @@ library
       Data.Habulara.Core.Types.NonEmpty
       Data.Habulara.Core.Types.Record
       Data.Habulara.Core.Types.Value
-      Data.Habulara.Dsl
-      Data.Habulara.Internal.Commons.Convert
-      Data.Habulara.Internal.Commons.Csv
-      Data.Habulara.Internal.Commons.Read
-      Data.Habulara.Internal.Commons.String
-      Data.Habulara.Internal.Commons.Text
-      Data.Habulara.Internal.Commons.Time
-      Data.Habulara.Internal.Dsl.CodeGen
-      Data.Habulara.Internal.Dsl.Compiler
-      Data.Habulara.Internal.Dsl.Types
-      Data.Habulara.Internal.Dsl.Utils
-      Data.Habulara.Internal.Mapping
-      Data.Habulara.Internal.Operators
-      Data.Habulara.Internal.Reading
-      Data.Habulara.Internal.Writing
-      Data.Habulara.Types
   other-modules:
       Paths_habulara
   hs-source-dirs:
@@ -68,22 +52,16 @@ library
   default-extensions: OverloadedStrings
   ghc-options: -Wall
   build-depends:
-      aeson
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , bytestring
     , cassava
     , conduit
-    , containers
-    , iconv
     , mtl
-    , profunctors
     , scientific
-    , string-interpolate
     , text
     , time
     , unordered-containers
     , vector
-    , yaml
   default-language: Haskell2010
 
 executable habulara
@@ -94,23 +72,17 @@ executable habulara
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
-      aeson
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , bytestring
     , cassava
     , conduit
-    , containers
     , habulara
-    , iconv
     , mtl
-    , profunctors
     , scientific
-    , string-interpolate
     , text
     , time
     , unordered-containers
     , vector
-    , yaml
   if flag(static) && !(os(osx))
     ld-options: -static -pthread
   default-language: Haskell2010
@@ -124,24 +96,18 @@ test-suite habulara-doctest
       ./.
   ghc-options: -threaded
   build-depends:
-      aeson
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , bytestring
     , cassava
     , conduit
-    , containers
     , doctest
     , habulara
-    , iconv
     , mtl
-    , profunctors
     , scientific
-    , string-interpolate
     , text
     , time
     , unordered-containers
     , vector
-    , yaml
   default-language: Haskell2010
 
 test-suite habulara-test
@@ -156,22 +122,16 @@ test-suite habulara-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       QuickCheck
-    , aeson
     , base >=4.7 && <5
     , bytestring
     , cassava
     , conduit
-    , containers
     , habulara
-    , iconv
     , mtl
-    , profunctors
     , quickcheck-instances
     , scientific
-    , string-interpolate
     , text
     , time
     , unordered-containers
     , vector
-    , yaml
   default-language: Haskell2010
