feat(app): start proper CLI user experience, add "process" command
Now using `optparse-applicative` for the CLI application. We are going
to work with commands as I anticipate we will end up with a few
functionalities packed into the main application. The first and core
command is `process`.

--- a/habulara.cabal
+++ b/habulara.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 71c6be2cd2e97569fc53c5d906c0685c1c9172d9211dfda87ad8baa82d212c9e
+-- hash: a4c34310d9ecee3092023313105a975da069f7c3329d506c2711dcb26744a4da
 
 name:           habulara
 version:        0.0.0.2
@@ -84,6 +84,7 @@ executable habulara
     , conduit
     , habulara
     , mtl
+    , optparse-applicative
     , scientific
     , text
     , time
