--- a/habulara.cabal
+++ b/habulara.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 7bfd8597895058fbf0f8230d08d2e92c0a697a1a00f481f86a774aef8dd9a11d
+-- hash: 02ad258bbba0720eed6351841b6431e31ff9bd672cdc0cbd2feea79b5c2d1101
 
 name:           habulara
 version:        0.0.0.4
@@ -48,6 +48,7 @@ library
       Data.Habulara.Dsl
       Data.Habulara.Dsl.Operators
       Data.Habulara.Dsl.Specification
+      Data.Habulara.Inspect.Internal
   other-modules:
       Paths_habulara
   hs-source-dirs:
@@ -66,6 +67,7 @@ library
     , scientific
     , text
     , time
+    , typed-process
     , unordered-containers
     , vector
     , yaml
@@ -92,6 +94,7 @@ executable habulara
     , scientific
     , text
     , time
+    , typed-process
     , unordered-containers
     , vector
     , yaml
@@ -121,6 +124,7 @@ test-suite habulara-doctest
     , scientific
     , text
     , time
+    , typed-process
     , unordered-containers
     , vector
     , yaml
@@ -151,6 +155,7 @@ test-suite habulara-test
     , scientific
     , text
     , time
+    , typed-process
     , unordered-containers
     , vector
     , yaml
