refactor: drop TemplateHaskell usage for Aeson.FromJSON instances
This will help us to compile statically on Nix a little easier.

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -27,13 +27,13 @@
   - default: false # All extension are banned by default
   - name: # Only these listed extensions should be used (to be refined further in the future):
     - ConstraintKinds
+    - DeriveGeneric
     - FlexibleContexts
     - FlexibleInstances
     - FunctionalDependencies
     - GeneralizedNewtypeDeriving
     - LambdaCase
     - RankNTypes
-    - TemplateHaskell
     - TupleSections
 
 ################
